fix: removed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,3 +51,11 @@ h3 {
 h4 {
   font-size: 1.2rem;
 }
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+}
